# videosdk-linux-qt-quickstart

./: .gitignore  CMakeLists.txt  README.md  config.json  context7.json  run_qt_demo.sh  run_simple_join.sh
src/: CMakeLists.txt  QtMainWindow.cpp  QtMainWindow.h  QtPreviewVideoHandler.cpp  QtPreviewVideoHandler.h  QtRemoteVideoHandler.cpp  QtRemoteVideoHandler.h  QtVideoRenderer.cpp  QtVideoRenderer.h  QtVideoWidget.cpp  QtVideoWidget.h  config.json  simple_join.cpp  zoom_v-sdk_linux_bot_qt.cpp
